Added weather data api getter function

--- a/notebooks/data_prep.ipynb
+++ b/notebooks/data_prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,6 +22,7 @@
     "from pvlib.temperature import TEMPERATURE_MODEL_PARAMETERS\n",
     "\n",
     "import zipfile\n",
+    "import requests\n",
     "\n",
     "import geopandas as gpd\n",
     "import matplotlib.pyplot as plt\n",
@@ -683,6 +684,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_pv = pd.read_csv(os.path.join(os.getcwd(), 'data', 'raw_data', 'pv', 'filtered_pv_power_measurements_ac.csv'), index_col=0, parse_dates=True)\n",
+    "\n",
+    "df_pv.head()"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -693,10 +705,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>temperature_2m</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2018-01-01T00:00</td>\n",
+       "      <td>7.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2018-01-01T01:00</td>\n",
+       "      <td>7.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2018-01-01T02:00</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2018-01-01T03:00</td>\n",
+       "      <td>7.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2018-01-01T04:00</td>\n",
+       "      <td>6.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26299</th>\n",
+       "      <td>2020-12-31T19:00</td>\n",
+       "      <td>0.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26300</th>\n",
+       "      <td>2020-12-31T20:00</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26301</th>\n",
+       "      <td>2020-12-31T21:00</td>\n",
+       "      <td>0.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26302</th>\n",
+       "      <td>2020-12-31T22:00</td>\n",
+       "      <td>0.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26303</th>\n",
+       "      <td>2020-12-31T23:00</td>\n",
+       "      <td>1.2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>26304 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   time  temperature_2m\n",
+       "0      2018-01-01T00:00             7.7\n",
+       "1      2018-01-01T01:00             7.2\n",
+       "2      2018-01-01T02:00             7.0\n",
+       "3      2018-01-01T03:00             7.2\n",
+       "4      2018-01-01T04:00             6.8\n",
+       "...                 ...             ...\n",
+       "26299  2020-12-31T19:00             0.8\n",
+       "26300  2020-12-31T20:00             0.5\n",
+       "26301  2020-12-31T21:00             0.4\n",
+       "26302  2020-12-31T22:00             0.4\n",
+       "26303  2020-12-31T23:00             1.2\n",
+       "\n",
+       "[26304 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lat_avg = df_meta['latitude'].mean()\n",
+    "lng_avg = df_meta['longitude'].mean()\n",
+    "start_date = df_pv_filtered.index[0]\n",
+    "end_date = df_pv_filtered.index[-1]\n",
+    "variables =  ['temperature_2m', 'direct_radiation', 'direct_normal_irradiance']\n",
+    "\n",
+    "\n",
+    "df_weather = get_weather_data(lat_avg, lng_avg, start_date, end_date, variables)\n",
+    "\n",
+    "df_weather"
+   ]
   },
   {
    "attachments": {},
