--- a/notebooks/modeling.ipynb
+++ b/notebooks/modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,6 +39,146 @@
     "\n",
     "import re\n",
     "import copy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current working directory: c:\\Users\\nik\\Desktop\\Berkeley_Projects\\net-load-forecasting\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Set working directory\n",
+    "os.chdir(r\"..\") # should be the git repo root directory\n",
+    "print(\"Current working directory: \" + os.getcwd())\n",
+    "repo_name = 'net-load-forecasting'\n",
+    "assert os.getcwd()[-len(repo_name):] == \"net-load-forecasting\", \"Working directory is not the git repo root directory\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean_data_path = os.path.join(os.getcwd(),'data','clean_data')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>component</th>\n",
+       "      <th>net_community_load</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>time</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2014-08-27 00:00:00</th>\n",
+       "      <td>2973.965877</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-08-27 00:15:00</th>\n",
+       "      <td>2678.502833</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-08-27 00:30:00</th>\n",
+       "      <td>2776.943558</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-08-27 00:45:00</th>\n",
+       "      <td>2975.639441</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-08-27 01:00:00</th>\n",
+       "      <td>3332.794556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-12-29 22:45:00</th>\n",
+       "      <td>4587.582423</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-12-29 23:00:00</th>\n",
+       "      <td>4447.781363</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-12-29 23:15:00</th>\n",
+       "      <td>3685.346414</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-12-29 23:30:00</th>\n",
+       "      <td>3666.789860</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-12-29 23:45:00</th>\n",
+       "      <td>3456.915614</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>82176 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "component            net_community_load\n",
+       "time                                   \n",
+       "2014-08-27 00:00:00         2973.965877\n",
+       "2014-08-27 00:15:00         2678.502833\n",
+       "2014-08-27 00:30:00         2776.943558\n",
+       "2014-08-27 00:45:00         2975.639441\n",
+       "2014-08-27 01:00:00         3332.794556\n",
+       "...                                 ...\n",
+       "2016-12-29 22:45:00         4587.582423\n",
+       "2016-12-29 23:00:00         4447.781363\n",
+       "2016-12-29 23:15:00         3685.346414\n",
+       "2016-12-29 23:30:00         3666.789860\n",
+       "2016-12-29 23:45:00         3456.915614\n",
+       "\n",
+       "[82176 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_hdf(os.path.join(clean_data_path, \"data_net_load_forecasting.h5\"), key='15min/netload')"
    ]
   },
   {
@@ -366,7 +506,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.3"
   },
   "orig_nbformat": 4
