--- a/notebooks/data_driven_modeling.ipynb
+++ b/notebooks/data_driven_modeling.ipynb
@@ -76,190 +76,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "class Config:\n",
-    "\n",
-    "    '''\n",
-    "    \n",
-    "    Class to store config parameters, to circumvent the wandb.config when combining multiple models.\n",
-    "    \n",
-    "    '''\n",
-    "\n",
-    "    def __init__(self):\n",
-    "        self.data = {}\n",
-    "\n",
-    "    def __getattr__(self, key):\n",
-    "        if key in self.data:\n",
-    "            return self.data[key]\n",
-    "        else:\n",
-    "            raise AttributeError(f\"'Config' object has no attribute '{key}'\")\n",
-    "\n",
-    "    def __setattr__(self, key, value):\n",
-    "        if key == 'data':\n",
-    "            # Allow normal assignment for the 'data' attribute\n",
-    "            super().__setattr__(key, value)\n",
-    "        else:\n",
-    "            self.data[key] = value\n",
-    "\n",
-    "    def __delattr__(self, key):\n",
-    "        if key in self.data:\n",
-    "            del self.data[key]\n",
-    "        else:\n",
-    "            raise AttributeError(f\"'Config' object has no attribute '{key}'\")\n",
-    "\n",
-    "    def __len__(self):\n",
-    "        return len(self.data)\n",
-    "\n",
-    "    def keys(self):\n",
-    "        return self.data.keys()\n",
-    "\n",
-    "    def values(self):\n",
-    "        return self.data.values()\n",
-    "\n",
-    "    def items(self):\n",
-    "        return self.data.items()\n",
-    "\n",
-    "    def __getitem__(self, key):\n",
-    "        return self.data[key]\n",
-    "\n",
-    "    def __setitem__(self, key, value):\n",
-    "        self.data[key] = value\n",
-    "\n",
-    "    @classmethod\n",
-    "    def from_dict(cls, data):\n",
-    "        config = cls()\n",
-    "        for key, value in data.items():\n",
-    "            if isinstance(value, dict):\n",
-    "                value = cls.from_dict(value)  # Recursively convert nested dictionaries\n",
-    "            setattr(config, key, value)\n",
-    "        return config\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# run parameters\n",
     "\n",
+    "model_types = ['integrated', 'additive', 'direct']\n",
+    "\n",
+    "model_type = model_types[0]\n",
+    "\n",
     "config_dataset = {\n",
-    "    'spatial_scale': '1_county',\n",
+    "    'model_type': model_type,\n",
     "    'METER': '2',\n",
     "    'META': '1',\n",
+    "    'train_end': '2015-10-01',\n",
+    "    'val_end' : '2016-04-01',\n",
+    "    'lookback_in_hours' : 24,\n",
     "    'liklihood': None,\n",
-    "     'holiday': True,\n",
-    "     'use_datetime_encoding': False,\n",
-    "     'boxcox': False,\n",
+    "    'holiday': True,\n",
+    "    'use_datetime_encoding': False,\n",
+    "    'boxcox': False,\n",
+    "    'config.eval_metrics' : [mae, mse, rmse]\n",
     "}\n",
     "\n",
     "# derived parameters\n",
     "\n",
-    "config = Config().from_dict(config_dataset)\n",
-    "config.temp_resolution = 15 # in minutes\n",
-    "config.horizon_in_hours = 24 + 36 if config.METER == '2' else 36 # in hours\n",
-    "config.lookback_in_hours = 24 # in hours\n",
     "\n",
-    "config.timestep_encoding = [\"hour\", \"minute\"] if config.temp_resolution == 1 else ['quarter']\n",
-    "config.datetime_encoding =  {\n",
-    "                    \"cyclic\": {\"past\": config.timestep_encoding}, \n",
-    "                    \"position\": {\"past\": [\"relative\",]},\n",
-    "                    \"datetime_attribute\": {\"past\": [\"dayofweek\", \"week\"]},\n",
-    "                    'position': {'past': ['relative']},\n",
-    "               } if config.use_datetime_encoding else None\n",
     "\n",
-    "config.timesteps_per_hour = int(60 / config.temp_resolution)\n",
-    "config.n_lags = config.lookback_in_hours * config.timesteps_per_hour\n",
-    "config.n_ahead = config.horizon_in_hours * config.timesteps_per_hour\n",
-    "config.eval_stride = int(np.sqrt(config.n_ahead)) # evaluation stride, how often to evaluate the model, in this case we evaluate every n_ahead steps\n",
-    "config.eval_metrics = [mae, mse, rmse, r2_score]\n"
+    "config = build_config(config_dataset)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# calculate derived parameters\n",
     "\n",
     "\n",
-    "df = pd.read_hdf(os.path.join(clean_data_path, \"data_net_load_forecasting.h5\"), key=f\"{config.temp_resolution}min/netload\")\n",
-    "df_pv = pd.read_hdf(os.path.join(clean_data_path, \"data_net_load_forecasting.h5\"), key=f\"{config.temp_resolution}min/community_pv\")\n",
-    "df_meta = pd.read_hdf(os.path.join(clean_data_path, \"data_net_load_forecasting.h5\"), key='pv_metadata')\n",
-    "df_irr = pd.read_hdf(os.path.join(clean_data_path, \"data_net_load_forecasting.h5\"), key=f\"{config.temp_resolution}min/weather\")\n",
-    "df_irr.rename({'temperature': 'temp_air'}, axis=1, inplace=True)\n",
-    "df_pv_forecast = pd.read_hdf(os.path.join(model_data_path, \"pv_model_results.h5\"), key=f\"{config.temp_resolution}min/pv_forecast_META-{config_dataset['META']}\")\n"
+    "def load_data(config):\n",
+    "\n",
+    "    '''\n",
+    "\n",
+    "    Function to load the data for the different model setups.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    config : Config\n",
+    "        Config object with the model setup parameters.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "\n",
+    "\n",
+    "    '''\n",
+    "\n",
+    "    df = pd.read_hdf(os.path.join(clean_data_path, \"data_net_load_forecasting.h5\"), key=f\"{config.temp_resolution}min/netload\")\n",
+    "    df_irr = pd.read_hdf(os.path.join(clean_data_path, \"data_net_load_forecasting.h5\"), key=f\"{config.temp_resolution}min/weather\")\n",
+    "    df_irr.rename({'temperature': 'temp_air'}, axis=1, inplace=True)\n",
+    "    df_pv_forecast = pd.read_hdf(os.path.join(model_data_path, \"pv_model_results.h5\"), key=f\"{config.temp_resolution}min/pv_forecast_META-{config.META}\")\n",
+    "\n",
+    "    df_train_int = df.loc[:config.train_end]\n",
+    "    df_val_int = df.loc[config.train_end:config.val_end]\n",
+    "    df_test_int = df.loc[config.val_end:]\n",
+    "\n",
+    "    df_cov_dir_train = df_irr.loc[:config.train_end]\n",
+    "    df_cov_dir_val = df_irr.loc[config.train_end:config.val_end]\n",
+    "    df_cov_dir_test = df_irr.loc[config.val_end:]\n",
+    "\n",
+    "    df_cov_pv_train = df_pv_forecast.loc[:config.train_end]\n",
+    "    df_cov_pv_val = df_pv_forecast.loc[config.train_end:config.val_end]\n",
+    "    df_cov_pv_test = df_pv_forecast.loc[config.val_end:]\n",
+    "\n",
+    "    df_train_add = df_train_int + df_cov_pv_train.values\n",
+    "    df_train_add[df_train_add < 0] = 0\n",
+    "    df_val_add = df_val_int + df_cov_pv_val.values\n",
+    "    df_val_add[df_val_add < 0] = 0\n",
+    "    df_test_add = df_test_int + df_cov_pv_test.values\n",
+    "    df_test_add[df_test_add < 0] = 0\n",
+    "\n",
+    "    # In this study we are comparing three different model setups: integrated, additive and direct for net load forecasting\n",
+    "    model_setups = {\n",
+    "                    'integrated': {'target': (df_train_int, df_val_int, df_test_int), 'covs': (df_cov_pv_train, df_cov_pv_val, df_cov_pv_test)},\n",
+    "                    'additive': {'target': (df_train_add, df_val_add, df_test_add), 'covs': (None, None, None)},\n",
+    "                    'direct': {'target': (df_train_int, df_val_int, df_test_int), 'covs': (df_cov_dir_train, df_cov_dir_val, df_cov_dir_test)}\n",
+    "                    }\n",
+    "    data = model_setups[config.model_type] \n",
+    "    \n",
+    "    return data\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_end = '2015-10-01'\n",
-    "val_end = '2016-04-01'\n",
+    "def darts_data_pipeline(config, data):\n",
     "\n",
-    "df_train_int = df.loc[:train_end]\n",
-    "df_val_int = df.loc[train_end:val_end]\n",
-    "df_test_int = df.loc[val_end:]\n",
+    "    '''\n",
     "\n",
-    "df_cov_dir_train = df_irr.loc[:train_end]\n",
-    "df_cov_dir_val = df_irr.loc[train_end:val_end]\n",
-    "df_cov_dir_test = df_irr.loc[val_end:]\n",
+    "    Function to transform the data into darts.TimeSeries format and apply the data pipeline.\n",
     "\n",
-    "df_cov_pv_train = df_pv_forecast.loc[:train_end]\n",
-    "df_cov_pv_val = df_pv_forecast.loc[train_end:val_end]\n",
-    "df_cov_pv_test = df_pv_forecast.loc[val_end:]\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    config : Config\n",
     "\n",
-    "df_train_add = df_train_int + df_cov_pv_train.values\n",
-    "df_train_add[df_train_add < 0] = 0\n",
-    "df_val_add = df_val_int + df_cov_pv_val.values\n",
-    "df_val_add[df_val_add < 0] = 0\n",
-    "df_test_add = df_test_int + df_cov_pv_test.values\n",
-    "df_test_add[df_test_add < 0] = 0\n",
+    "    data : dict\n",
+    "        Dictionary with the data for the different model setups.\n",
     "\n",
-    "# In this study we are comparing three different model setups: integrated, additive and direct for net load forecasting\n",
-    "model_setups = {\n",
-    "                'integrated': {'target': (df_train_int, df_val_int, df_test_int), 'covs': (df_cov_pv_train, df_cov_pv_val, df_cov_pv_test)},\n",
-    "                'additive': {'target': (df_train_add, df_val_add, df_test_add), 'covs': (None, None, None)},\n",
-    "                'direct': {'target': (df_train_int, df_val_int, df_test_int), 'covs': (df_cov_dir_train, df_cov_dir_val, df_cov_dir_test)}\n",
-    "                }\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 193,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model setup: integrated\n",
-      "Evaluating on validation set\n",
-      "Model setup: additive\n",
-      "Evaluating on validation set\n",
-      "Model setup: direct\n",
-      "Evaluating on validation set\n"
-     ]
-    }
-   ],
-   "source": [
-    "predictions_per_model = {}\n",
-    "scores_per_model = {}\n",
+    "    Returns\n",
+    "    -------\n",
+    "    piped_data : dict\n",
+    "        Dictionary with the transformed data for the different model setups.\n",
     "\n",
-    "for model_setup, data in model_setups.items():\n",
+    "    pipeline : darts.dataprocessing.pipeline.Pipeline\n",
+    "        Pipeline object with the data pipeline.\n",
     "\n",
-    "    print(f\"Model setup: {model_setup}\")\n",
     "\n",
+    "    '''\n",
+    "\n",
+    "\n",
+    "    \n",
     "    df_train, df_val, df_test = data['target']\n",
     "    df_cov_train, df_cov_val, df_cov_test = data['covs']\n",
+    "    \n",
     "\n",
     "    # Into Darts format\n",
     "    ts_train = darts.TimeSeries.from_dataframe(df_train, freq=str(config.temp_resolution) + 'min')\n",
@@ -270,7 +212,7 @@
     "    ts_test = extract_subseries(ts_test)\n",
     "\n",
     "\n",
-    "    if model_setup == 'additive':\n",
+    "    if config.model_setup == 'additive':\n",
     "        ts_cov_train = None\n",
     "        ts_cov_val = None\n",
     "        ts_cov_test = None\n",
@@ -308,7 +250,7 @@
     "    trg_val_inversed = pipeline.inverse_transform(ts_val_piped, partial=True)# inverse transform the target, we need the original values for the evaluation\n",
     "    trg_test_inversed = pipeline.inverse_transform(ts_test_piped, partial=True) # inverse transform the target, we need the original values for the evaluation\n",
     "\n",
-    "    if model_setup == 'additive':\n",
+    "    if config.model_setup == 'additive':\n",
     "        ts_cov_train_piped = None\n",
     "        ts_cov_val_piped = None\n",
     "        ts_cov_test_piped = None\n",
@@ -319,6 +261,38 @@
     "        ts_cov_train_piped = pipeline_weather.fit_transform(ts_cov_train)\n",
     "        ts_cov_val_piped = pipeline_weather.transform(ts_cov_val)[longest_ts_val_idx]\n",
     "        ts_cov_test_piped = pipeline_weather.transform(ts_cov_test)[longest_ts_test_idx]\n",
+    "\n",
+    "    piped_data = {'target': (ts_train_piped, ts_val_piped, ts_test_piped), 'covs': (ts_cov_train_piped, ts_cov_val_piped, ts_cov_test_piped), 'target_inversed': (trg_train_inversed, trg_val_inversed, trg_test_inversed)}\n",
+    "\n",
+    "    return piped_data, pipeline\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model setup: integrated\n",
+      "Evaluating on validation set\n",
+      "Model setup: additive\n",
+      "Evaluating on validation set\n",
+      "Model setup: direct\n",
+      "Evaluating on validation set\n"
+     ]
+    }
+   ],
+   "source": [
+    "predictions_per_model = {}\n",
+    "scores_per_model = {}\n",
+    "\n",
+    "for model_setup, data in model_setups.items():\n",
+    "\n",
+    "    print(f\"Model setup: {model_setup}\")\n",
     "\n",
     "\n",
     "    model = LightGBMModel(lags=config.n_lags,\n",
@@ -435,156 +409,6 @@
     "df_predictions = pd.concat(predictions_per_model.values(), axis=1)\n",
     "\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 196,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>prediction_integrated</th>\n",
-       "      <th>prediction_additive</th>\n",
-       "      <th>prediction_direct</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>time</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2015-10-20 00:00:00</th>\n",
-       "      <td>2375.844306</td>\n",
-       "      <td>3331.471623</td>\n",
-       "      <td>2627.311728</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-10-20 00:15:00</th>\n",
-       "      <td>2405.335193</td>\n",
-       "      <td>3231.252879</td>\n",
-       "      <td>2568.552291</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-10-20 00:30:00</th>\n",
-       "      <td>2508.839362</td>\n",
-       "      <td>3203.522313</td>\n",
-       "      <td>2399.181212</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-10-20 00:45:00</th>\n",
-       "      <td>2351.911826</td>\n",
-       "      <td>3207.357408</td>\n",
-       "      <td>2510.950081</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-10-20 01:00:00</th>\n",
-       "      <td>2551.820409</td>\n",
-       "      <td>3186.972473</td>\n",
-       "      <td>2566.965671</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-11-04 12:15:00</th>\n",
-       "      <td>-11457.142956</td>\n",
-       "      <td>-5855.964846</td>\n",
-       "      <td>-8022.584216</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-11-04 12:30:00</th>\n",
-       "      <td>-10127.058604</td>\n",
-       "      <td>-7110.503282</td>\n",
-       "      <td>-10858.356208</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-11-04 12:45:00</th>\n",
-       "      <td>-10294.996703</td>\n",
-       "      <td>-4471.148879</td>\n",
-       "      <td>-9824.227266</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-11-04 13:00:00</th>\n",
-       "      <td>-11266.251592</td>\n",
-       "      <td>-2878.415583</td>\n",
-       "      <td>-10770.774400</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-11-04 13:15:00</th>\n",
-       "      <td>-10006.570775</td>\n",
-       "      <td>-4594.176078</td>\n",
-       "      <td>-5175.386831</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1494 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                     prediction_integrated  prediction_additive  \\\n",
-       "time                                                              \n",
-       "2015-10-20 00:00:00            2375.844306          3331.471623   \n",
-       "2015-10-20 00:15:00            2405.335193          3231.252879   \n",
-       "2015-10-20 00:30:00            2508.839362          3203.522313   \n",
-       "2015-10-20 00:45:00            2351.911826          3207.357408   \n",
-       "2015-10-20 01:00:00            2551.820409          3186.972473   \n",
-       "...                                    ...                  ...   \n",
-       "2015-11-04 12:15:00          -11457.142956         -5855.964846   \n",
-       "2015-11-04 12:30:00          -10127.058604         -7110.503282   \n",
-       "2015-11-04 12:45:00          -10294.996703         -4471.148879   \n",
-       "2015-11-04 13:00:00          -11266.251592         -2878.415583   \n",
-       "2015-11-04 13:15:00          -10006.570775         -4594.176078   \n",
-       "\n",
-       "                     prediction_direct  \n",
-       "time                                    \n",
-       "2015-10-20 00:00:00        2627.311728  \n",
-       "2015-10-20 00:15:00        2568.552291  \n",
-       "2015-10-20 00:30:00        2399.181212  \n",
-       "2015-10-20 00:45:00        2510.950081  \n",
-       "2015-10-20 01:00:00        2566.965671  \n",
-       "...                                ...  \n",
-       "2015-11-04 12:15:00       -8022.584216  \n",
-       "2015-11-04 12:30:00      -10858.356208  \n",
-       "2015-11-04 12:45:00       -9824.227266  \n",
-       "2015-11-04 13:00:00      -10770.774400  \n",
-       "2015-11-04 13:15:00       -5175.386831  \n",
-       "\n",
-       "[1494 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 196,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_predictions"
    ]
   },
   {
