--- a/notebooks/data_driven_modeling.ipynb
+++ b/notebooks/data_driven_modeling.ipynb
@@ -76,18 +76,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# run parameters\n",
     "\n",
-    "model_types = ['integrated', 'additive', 'direct']\n",
+    "model_types = ['integrated', 'additive', \n",
+    "            ]\n",
     "\n",
-    "model_type = model_types[0]\n",
-    "\n",
-    "config_dataset = {\n",
-    "    'model_type': model_type,\n",
+    "config_run = {\n",
+    "    'model_types': [model_type],\n",
     "    'METER': '2',\n",
     "    'META': '1',\n",
     "    'train_end': '2015-10-01',\n",
@@ -109,11 +108,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "\n",
     "def load_data(config):\n",
     "\n",
@@ -128,6 +126,8 @@
     "\n",
     "    Returns\n",
     "    -------\n",
+    "    data : dict\n",
+    "        Dictionary with the data for a specific model setup.\n",
     "\n",
     "\n",
     "    '''\n",
@@ -162,18 +162,18 @@
     "                    'additive': {'target': (df_train_add, df_val_add, df_test_add), 'covs': (None, None, None)},\n",
     "                    'direct': {'target': (df_train_int, df_val_int, df_test_int), 'covs': (df_cov_dir_train, df_cov_dir_val, df_cov_dir_test)}\n",
     "                    }\n",
-    "    data = model_setups[config.model_type] \n",
-    "    \n",
-    "    return data\n"
+    "\n",
+    "\n",
+    "    return model_setups"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def darts_data_pipeline(config, data):\n",
+    "def darts_data_pipeline(config, model_setups):\n",
     "\n",
     "    '''\n",
     "\n",
@@ -197,7 +197,7 @@
     "\n",
     "    '''\n",
     "\n",
-    "\n",
+    "    \n",
     "    \n",
     "    df_train, df_val, df_test = data['target']\n",
     "    df_cov_train, df_cov_val, df_cov_test = data['covs']\n",
@@ -238,7 +238,6 @@
     "    # Load pipeline\n",
     "    pipeline = Pipeline( # missing values have been filled in the 'data_prep.ipynb'\n",
     "                        [\n",
-    "                        #BoxCox() if config_modeldesign['boxcox'] else None,\n",
     "                        Scaler(MinMaxScaler()),\n",
     "                        ]\n",
     "                        )\n",
@@ -290,36 +289,35 @@
     "predictions_per_model = {}\n",
     "scores_per_model = {}\n",
     "\n",
-    "for model_setup, data in model_setups.items():\n",
     "\n",
-    "    print(f\"Model setup: {model_setup}\")\n",
-    "\n",
-    "\n",
-    "    model = LightGBMModel(lags=config.n_lags,\n",
-    "                    lags_future_covariates= None if model_setup == 'additive' else [0],\n",
-    "                    add_encoders=config.datetime_encoding   , \n",
-    "                    output_chunk_length=config.n_ahead, \n",
-    "                    likelihood=None,\n",
-    "                    random_state=42\n",
-    "                    )\n",
-    "\n",
-    "    model.fit(ts_train_piped, future_covariates = ts_cov_train_piped)\n",
-    "\n",
-    "    print('Evaluating on validation set')\n",
-    "    predictions, scores = predict_testset(config, model, \n",
-    "                                    ts_val_piped, \n",
-    "                                    ts_cov_val_piped,\n",
-    "                                    pipeline,\n",
-    "                                    )\n",
     "    \n",
-    "    predictions.columns = ['prediction_'+model_setup]\n",
     "\n",
-    "    # subtracting the covariates from the predictions, since we are predicting the net load\n",
-    "    if model_setup == 'additive':\n",
-    "        predictions -= df_cov_pv_val.reindex(predictions.index).values\n",
     "\n",
-    "    predictions_per_model[model_setup] = predictions\n",
-    "    scores_per_model[model_setup] = scores\n",
+    "model = LightGBMModel(lags=config.n_lags,\n",
+    "                lags_future_covariates= None if config.model_setup == 'additive' else [0],\n",
+    "                add_encoders=config.datetime_encoding   , \n",
+    "                output_chunk_length=config.n_ahead, \n",
+    "                likelihood=None,\n",
+    "                random_state=42\n",
+    "                )\n",
+    "\n",
+    "model.fit(ts_train_piped, future_covariates = ts_cov_train_piped)\n",
+    "\n",
+    "print('Evaluating on validation set')\n",
+    "predictions, scores = predict_testset(config, model, \n",
+    "                                ts_val_piped, \n",
+    "                                ts_cov_val_piped,\n",
+    "                                pipeline,\n",
+    "                                )\n",
+    "\n",
+    "predictions.columns = ['prediction_'+model_setup]\n",
+    "\n",
+    "# subtracting the covariates from the predictions, since we are predicting the net load\n",
+    "if model_setup == 'additive':\n",
+    "    predictions -= df_cov_pv_val.reindex(predictions.index).values\n",
+    "\n",
+    "predictions_per_model[model_setup] = predictions\n",
+    "scores_per_model[model_setup] = scores\n",
     "\n",
     "\n",
     "\n"
